Bug 1319521 - Send PWebRenderBridge::Destroy earlier. r=gfx?

Instead of waiting until the WebRenderLayerManager destructor runs, we can
send the destroy message a little earlier, when it is Destroy()'d. Also add
a guard to prevent double-destruction, just in case.

MozReview-Commit-ID: 8pCRwH7Xecw